# reaxion

./: README.md  README_base.md  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py  index.rst
docs/source/: API.rst  Quickstart.rst  community.rst  installation.rst
examples/: CIE.ipynb  CIE_prototype.ipynb  convert_notebook_to_readme.sh  cooling.ipynb  neutral_cooling.ipynb
src/jaco/: __init__.py  equation_system.py  species_strings.py
src/jaco/data/: atoms.py
src/jaco/eos/: eos.py
src/jaco/models/: model.py
src/jaco/models/starforge/: H2_cooling.py  line_cooling.py  starforge.py  symbols.py
src/jaco/models/starforge/h2_chemistry/: __init__.py  h2_chemistry.py  mutual_neutralization.py  photochemistry.py  radiative_association.py
src/jaco/processes/: freefree_emission.py  ionization.py  recombination.py
src/pism/: equation_system.py  equations.py  process.py  symbols.py
src/pism/data/: __init__.py  solar_abundances.py
src/pism/eos/: eos.py
src/pism/numerics/: solvers.py
src/pism/numerics/tests/: test_newton_rootsolve.py
src/reaxion/: equation_system.py  process.py
src/reaxion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/reaxion/numerics/: Untitled-2.ipynb
src/reaxion/processes/: finestructure.ipynb
tests/: neutral_cooling_testdata.npy  starforge_h2_chemistry.py  test_CIE.py  test_chemical_reaction.py  test_neutral_cooling.py  test_species.py
