[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pism"
version = "0.0.1"
authors = [
  { name="Mike Grudić", email="mike.grudic@gmail.com" },
]
description = "object-oriented ISM processes"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "jax", "sympy", "numpy", "sphinx_rtd_theme", "astropy"
]

license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/mikegrudic/pism"
Issues = "https://github.com/mikegrudic/pism/issues"